preparation for SourceTree

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="build/style.css">
 </head>
 <body>
-    <h1>aaaaaaaa</h1>
+    <h1></h1>
+    <h2>anhtua</h2>
 </body>
 </html>
