--- a/index.html
+++ b/index.html
@@ -3,10 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <title>Dev train - 05</title>
+    
     <link rel="stylesheet" href="build/style.css">
 </head>
 <body>
-    <h1></h1>
-    <h2>anhtua</h2>
+   
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+    <script src = "assets/js/bootstrap.js"></script>
+    <script src = "assets/js/custom1.js"></script>
 </body>
 </html>
