Add font OpenSanS-Bold

--- a/index.html
+++ b/index.html
@@ -3,13 +3,59 @@
 <head>
     <meta charset="UTF-8">
     <title>Dev train - 05</title>
-    
+
     <link rel="stylesheet" href="build/style.css">
 </head>
 <body>
-   
+   <div class="container-fluid">
+       <!--  Step 1-well come -->
+       <div class="row wellcome">
+            <div class="container">
+                <div class="row">
+                    <!--  My - navbar -->
+                    <div class="col-md-12 navibar">
+                        <nav class="navbar navbar-inverse navbar-fixed-top">
+                          <div class="container">
+                            <div class="navbar-header">
+                              <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+                                <span class="icon-bar"></span>
+                                <span class="icon-bar"></span>
+                                <span class="icon-bar"></span>
+                              </button>
+                              <a class="navbar-brand" href="#"><img src="assets/images/logo.png" alt=""></a>
+                            </div>
+                            <div class="collapse navbar-collapse" id="myNavbar">
+                              <ul class="nav navbar-nav navbar-right">
+                                <li class="active"><a href="#">Home</a></li>
+                                <li><a href="#">about</a></li>
+                                <li><a href="#">services</a></li>
+                                <li><a href="#">portfolio</a></li>
+                                <li><a href="#">testimonials</a></li>
+                                <li><a href="#">contact</a></li>
+                              
+                              </ul>
+                            </div>
+                          </div>
+                        </nav>
+                    </div>
+                    <!--  ENd my- Navbar -->
+                    <div class="col-md-12 header-content text-center">
+                        <span>WELCOME on <span>spirit8</span></span>
+                        <p>We are a digital agency with years of experience and with extraordinary people</p>
+                    </div>
+
+                </div>
+            </div>
+       </div>   
+        <!-- End Step 1-well come -->
+
+   </div>
+
+
+
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
     <script src = "assets/js/bootstrap.js"></script>
-    <script src = "assets/js/custom1.js"></script>
+    <script src = "build/scripts.min.js"></script>
 </body>
 </html>
