--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     <!--  ENd my- Navbar -->
                     <div class="col-md-12 header-content text-center">
                         <span>WELCOME on <span>spirit8</span></span>
-                        <p>We are a digital agency with years of experience and with extraordinary people</p>
+                        <p>We are a digital agency with <strong>years of experience</strong> and with e<strong>xtraordinary people</strong></p>
                     </div>
 
                 </div>
