Fix - respon for Header + Textarea

--- a/index.html
+++ b/index.html
@@ -576,7 +576,7 @@
                    </div>
                    <div class="mesager mt25">
                       <span>Messager <span class="important">*</span></span> <br>
-                     <input type="text">
+                      <textarea name=""></textarea>
                    </div>
                  </div>
                  <div class="col-md-12 col-sm-12 col-xs-12 text-right mt30 send">
